# compression-tool

./: .clang-format  .gitignore  1.md  CMakeLists.txt  HUFFMAN_MERGE.md  Makefile  README.md  README_UI.md  build.bat  lz77.cp312-win_amd64.pyd  package.bat  q.txt  requirements.txt  run.bat  run_ui_pyqt.bat  setup.py  task.md  test_lz77.py  test_lz77.spec  test_package.bat  test_site_compression.spec  项目配置.txt
.cache/clangd/index/: LZ77.cpp.65310262FE7A98D4.idx  LZ77.hpp.AE003F77B47244B1.idx  compressor.hpp.643236F0AB4E6E54.idx  dummy_compressor.cpp.8329B5F914F5718C.idx  dummy_compressor.hpp.ACD8DAE8786E9FA5.idx  helloWorld.cpp.B9A1F56C7A7558AD.idx  test_LZ77.cpp.9542A684B6B029BB.idx  test_compressor.cpp.905DAF1FF7B7D396.idx
build_tmp/test_lz77/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  xref-test_lz77.html
build_tmp/test_site_compression/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  xref-test_site_compression.html
build_wasm/: CMakeCache.txt  Makefile  cmake_install.cmake
build_wasm/src/algorithm/: Makefile  cmake_install.cmake
build_wasm/src/bindings/: Makefile  cmake_install.cmake  compressor_wasm.js  compressor_wasm.wasm  indent.html
build_wasm/src/core/: Makefile  cmake_install.cmake
build_wasm/tests/: Makefile  cmake_install.cmake
compressed/: 20260401_160643_demo_site.lz77pkg  20260401_160643_test1.txt.lz77pkg  20260401_161212_test1.txt.lz77pkg  20260401_162226_test1.txt.lz77pkg  20260401_162334_test1.txt.lz77pkg  20260401_163327_test1.txt.lz77pkg  20260401_165559_test1.txt.lz77  20260401_165602_demo_site.lz77  20260401_170123_demo_site.lz77  20260404_002641_test1.txt.lz77  20260404_185552_demo_site.lz77  demo_site.lz77  test1.txt.lz77  test1.txt.lz77pkg
docs/: mission.typ  template.typ  数据结构大作业任务书-2026.doc
files/demo_site/: index.html  site.webmanifest
files/demo_site/assets/data/: settings.xml
files/demo_site/assets/js/: app.js
logs/: demo_site.compressed.txt  demo_site.original.txt  test1.txt.compressed.txt  test1.txt.greedy.txt  test1.txt.original.txt
lty_cores/: lz77_core.cpp  lz77_core.h  字面量游程.md
lty_demo-site/assets/text/: sample.txt
lty_test/: c_api_test_pybind.cpp  command.txt  test_ctypes_global.py
resources/: test1.txt.lz77
resources/demo_site/: sitemap.xml
resources/demo_site/assets/css/: style.css
resources/demo_site/assets/data/: products.json
resources/staging/: 20260401_162334_test1.txt
scripts/: README.md  build_exe.py  copy_dlls.py
src/: test_huffman.cpp  test_lz77.py  test_site_compression.py
src/algorithm/: CMakeLists.txt
src/algorithm/include/: Deflate.hpp  Delta.hpp  Huffman.hpp  HuffmanTree.hpp  IAlgorithm.hpp  LZ77.hpp  LZSS.hpp
src/algorithm/src/: Deflate.cpp  Delta.cpp  Huffman.cpp  HuffmanTree.cpp  LZ77.cpp  LZSS.cpp
src/bindings/: CMakeLists.txt  lz77_pybind.cpp  wasm_bindings.cpp
src/bindings/pybind/: CMakeLists.txt  pybind_module.cpp
src/bindings/wasm/: CMakeLists.txt  wasm_bindings.cpp
src/core/: CMakeLists.txt
src/core/include/: Archiver.hpp  CompressorAPI.hpp  DeflateCompressor.hpp  ImageParser.hpp  LZSSCompressor.hpp  compressor.hpp  dummy_compressor.hpp
src/core/src/: Archiver.cpp  CompressorAPI.cpp  DeflateCompressor.cpp  ImageParser.cpp  LZSSCompressor.cpp  dummy_compressor.cpp
src/cores/: Huffman.cpp  HuffmanTree.cpp  lz77.cpp  lz77_core.cpp
src/include/: Huffman.hpp  HuffmanTree.hpp  core.hpp  lz77.hpp  lz77_core.h
src/ui/: __init__.py  pyqt_app.py
src/ui/services/: __init__.py  compression_service.py  models.py
tests/: CMakeLists.txt  helloWorld.cpp  test.cpp  test_Deflate.cpp  test_Huffman.cpp  test_LZ77.cpp  test_LZSS.cpp  test_compressor.cpp
tests/data/: cmu445.Deflate  cmu445.LZSS  cmu445.html  huge_test.html  test_decompressed.html  test_page.Deflate  test_page.Huffman  test_page.html  test_page.lz77  test_page.lzSS
zzz_project_example/: Makefile  c_api_test.cp312-win_amd64.pyd  setup.py
